--- a/package.json
+++ b/package.json
@@ -131,20 +131,22 @@
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
     "test:vitest:coverage": "vitest run --reporter verbose --coverage",
-    "lint": "eslint --max-warnings=0 .",
-    "lint:fix": "eslint --fix --max-warnings=0 .",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "deepClean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?*",
+    "lint": "npm --workspaces --if-present run lint && eslint --cache --cache-location .eslintcache --max-warnings=0 .",
+    "lint:fix": "npm --workspaces --if-present run lint:fix && eslint --cache --cache-location .eslintcache --fix --max-warnings=0 .",
+    "format": "npm --workspaces --if-present run format && prettier --cache --cache-location .prettiercache --write .",
+    "format:check": "npm --workspaces --if-present run format:check && prettier --cache --cache-location .prettiercache --check .",
+    "deepClean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .eslintcache .prettiercache node_modules/* node_modules/.[!.]* node_modules/..?*",
     "reset": "npm run deepClean && npm install && npm run build && (npm link || sudo npm link) && shx chmod +x bin/*.js && npx jest --clearCache",
     "git:status": "git status && git branch -vv && git diff dev origin/dev && git stash list",
     "git:remote": "git remote -v && git remote show origin",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
     "git:hardreset:dev": "git fetch origin && git checkout dev && git reset --hard origin/dev",
     "git:hardreset:edge": "git fetch origin && git checkout edge && git reset --hard origin/edge",
-    "runMeBeforePublish": "npm run lint && npm run format && npm run build && npm run test",
-    "fetchChip": "node scripts/fetch-chip.mjs",
+    "automator": "npm --workspaces --if-present run automator",
+    "dataModel": "node ./scripts/data-model.mjs",
+    "fetchChip": "node ./scripts/fetch-chip.mjs",
     "updateHtmls": "node ./scripts/marked.mjs",
+    "runMeBeforePublish": "npm run lint && npm run format && npm run build && npm run test",
     "prepublishOnly": "npm pkg delete devDependencies scripts && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
     "prepublishOnlyProduction": "npm run cleanBuildProduction && npm pkg delete devDependencies scripts && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* && npm install --omit=dev && npm shrinkwrap",
     "npmPack": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm pack && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
@@ -184,7 +186,7 @@
     "node-ansi-logger": "3.1.1",
     "node-persist-manager": "2.0.0",
     "ws": "8.18.3",
-    "@matterbridge/dgram": "0.0.1",
+    "@matterbridge/dgram": "0.0.2",
     "@matterbridge/utils": "0.0.1",
     "@matterbridge/jest-utils": "0.0.1",
     "@matterbridge/vitest-utils": "0.0.1"
