--- a/packages/vitest-utils/package.json
+++ b/packages/vitest-utils/package.json
@@ -30,6 +30,7 @@
     "node": ">=20.0.0 <21.0.0 || >=22.0.0 <23.0.0 || >=24.0.0 <25.0.0"
   },
   "scripts": {
+    "start": "node ./dist/export.js",
     "build": "tsc --project tsconfig.json",
     "buildProduction": "tsc --project tsconfig.production.json",
     "clean": "npx shx rm -rf tsconfig.tsbuildinfo dist",
@@ -44,12 +45,12 @@
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
     "test:vitest:coverage": "vitest run --reporter verbose --coverage",
-    "deepClean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json node_modules/* node_modules/.[!.]* node_modules/..?*",
+    "deepClean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json  .eslintcache .prettiercache node_modules/* node_modules/.[!.]* node_modules/..?*",
     "reset": "npm run deepClean && npm install && npm run build && npx jest --clearCache",
-    "lint": "eslint --max-warnings=0 .",
-    "lint:fix": "eslint --fix --max-warnings=0 .",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
+    "lint": "eslint --cache --cache-location .eslintcache --max-warnings=0 .",
+    "lint:fix": "eslint --cache --cache-location .eslintcache --fix --max-warnings=0 .",
+    "format": "prettier --cache --cache-location .prettiercache --write .",
+    "format:check": "prettier --cache --cache-location .prettiercache --check .",
     "preversion": "npm run runMeBeforePublish",
     "postversion": "git push && git push --tags",
     "version:patch": "npm version patch",
