--- a/.github/workflows/publish-dev-daily.yml
+++ b/.github/workflows/publish-dev-daily.yml
@@ -27,7 +27,28 @@ jobs:
       - name: Clean npm cache
         run: npm cache clean --force
 
-      - name: Extract base version and date
+      - name: Verify Node.js version
+        run: node -v
+
+      - name: Verify Npm version
+        run: npm -v
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build the project for production
+        run: npm run buildProduction
+
+      - name: Install matterbridge
+        run: npm install -g .
+
+      - name: Lint the project
+        run: npm run lint
+
+      - name: Test the project
+        run: npm run test
+
+      - name: Extract version and set tag
         id: vars
         run: |
           BASE=$(jq -r '.version' package.json)
@@ -37,22 +58,8 @@ jobs:
           echo "DEV_TAG=$DEV_TAG" >> $GITHUB_ENV
           echo "ORIG_SHA=$SHA"    >> $GITHUB_ENV
 
-      - name: Bump to date-stamped dev version --no-git-tag-version tag ${{ env.DEV_TAG }} sha ${{ env.ORIG_SHA }}
+      - name: Bump to date-stamped dev version tag ${{ env.DEV_TAG }} sha ${{ env.ORIG_SHA }}
         run: npm version "${{ env.DEV_TAG }}" --no-git-tag-version
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build, lint and test
-        run: |
-          npm run buildProduction
-          npm install -g .
-          npm run lint
-          npm run test
-          npm pkg delete devDependencies scripts types
-          npx rimraf ./node_modules
-          npm install --omit=dev
-          npm shrinkwrap
 
       - name: Check if a new dev-publish is needed
         id: check_new
