--- a/docker/Dockerfile.alpine
+++ b/docker/Dockerfile.alpine
@@ -23,9 +23,9 @@ COPY ./packages/vitest-utils/src ./packages/vitest-utils/src
 # COPY ./vendor ./vendor
 
 RUN npm ci --no-fund --no-audit && \
-  npm run cleanBuildProduction && \
-  npm pkg delete devDependencies scripts && \
-  rm -rf ./node_modules && \
+  npm run buildProduction && \
+  npm pkg delete devDependencies scripts workspaces && \
+  rm -rf node_modules package-lock.json npm-shrinkwrap.json && \
   npm install --no-fund --no-audit --omit=dev && \
   npm shrinkwrap --omit=dev && \
   npm pack
