--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -45,12 +45,12 @@
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
     "test:vitest:coverage": "vitest run --reporter verbose --coverage",
-    "deepClean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .eslintcache .prettiercache node_modules/* node_modules/.[!.]* node_modules/..?*",
+    "deepClean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .cache node_modules/* node_modules/.[!.]* node_modules/..?*",
     "reset": "npm run deepClean && npm install && npm run build && npx jest --clearCache",
-    "lint": "eslint --cache --cache-location .eslintcache --max-warnings=0 .",
-    "lint:fix": "eslint --cache --cache-location .eslintcache --fix --max-warnings=0 .",
-    "format": "prettier --cache --cache-location .prettiercache --write .",
-    "format:check": "prettier --cache --cache-location .prettiercache --check .",
+    "lint": "eslint --cache --cache-location .cache/.eslintcache --max-warnings=0 .",
+    "lint:fix": "eslint --cache --cache-location .cache/.eslintcache --fix --max-warnings=0 .",
+    "format": "prettier --cache --cache-location .cache/.prettiercache --write .",
+    "format:check": "prettier --cache --cache-location .cache/.prettiercache --check .",
     "preversion": "npm run runMeBeforePublish",
     "postversion": "git push && git push --tags",
     "version:patch": "npm version patch",
@@ -86,25 +86,25 @@
     "@eslint/js": "9.39.2",
     "@jest/globals": "30.2.0",
     "@types/jest": "30.0.0",
-    "@types/node": "25.0.3",
-    "@vitest/coverage-v8": "4.0.16",
-    "@vitest/eslint-plugin": "1.6.5",
+    "@types/node": "25.0.7",
+    "@vitest/coverage-v8": "4.0.17",
+    "@vitest/eslint-plugin": "1.6.6",
     "cross-env": "10.1.0",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.12.1",
-    "eslint-plugin-jsdoc": "61.5.0",
+    "eslint-plugin-jsdoc": "62.0.0",
     "eslint-plugin-n": "17.23.1",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
     "jest": "30.2.0",
-    "npm-check-updates": "19.2.1",
+    "npm-check-updates": "19.3.1",
     "prettier": "3.7.4",
     "shx": "0.4.0",
     "ts-jest": "29.4.6",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.51.0",
-    "vitest": "4.0.16"
+    "typescript-eslint": "8.53.0",
+    "vitest": "4.0.17"
   }
 }
