Add cache directory configuration to Jest Eslint Prettier and update package.json scripts

--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,7 @@
 # This file specifies directories and files that should be ignored when publishing the package to npm.
 
 # Specific directories that should be ignored
+.cache/
 .devcontainer/
 .git/
 .github/
@@ -20,8 +21,6 @@ test/
 vitest/
 
 # Specific files that should be ignored
-.eslintcache
-.prettiercache
 .gitattributes
 .gitignore
 .npmignore
