--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Specific directories that should be ignored
 # .vscode/
+.cache/
 coverage/
 dist/
 jest/
@@ -10,8 +11,6 @@ node_modules/
 temp/
 
 # Specific files that should be ignored
-.eslintcache
-.prettiercache
 *.backup
 *.heapsnapshot
 *.heapprofile
@@ -21,7 +20,6 @@ temp/
 
 # Package specific directories and files that should be ignored
 chip/
-matterbridgeDeviceTypes.clusters.zcl.revision.test.ts
 heap_profile
 heap_profiles
 heap_snapshots
