--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -46,7 +46,7 @@
     "test:vitest:verbose": "vitest run --reporter verbose",
     "test:vitest:coverage": "vitest run --reporter verbose --coverage",
     "deepClean": "npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .cache node_modules/* node_modules/.[!.]* node_modules/..?*",
-    "reset": "npm run deepClean && npm install && npm run build && npx jest --clearCache",
+    "reset": "npm run deepClean && npm install && npm run build",
     "lint": "eslint --cache --cache-location .cache/.eslintcache --max-warnings=0 .",
     "lint:fix": "eslint --cache --cache-location .cache/.eslintcache --fix --max-warnings=0 .",
     "format": "prettier --cache --cache-location .cache/.prettiercache --write .",
@@ -86,7 +86,7 @@
     "@eslint/js": "9.39.2",
     "@jest/globals": "30.2.0",
     "@types/jest": "30.0.0",
-    "@types/node": "25.0.7",
+    "@types/node": "25.0.8",
     "@vitest/coverage-v8": "4.0.17",
     "@vitest/eslint-plugin": "1.6.6",
     "cross-env": "10.1.0",
