--- a/packages/vitest-utils/.prettierignore
+++ b/packages/vitest-utils/.prettierignore
@@ -2,6 +2,7 @@
 # This file specifies directories and files that should be ignored by prettier formatting
 
 # Ignore specific directories
+.cache/
 .git/
 coverage/
 dist/
@@ -10,8 +11,6 @@ node_modules/
 temp/
 
 # Ignore specific files
-.eslintcache
-.prettiercache
 **/*.html
 
 # Package specific directories and files that should be ignored
