Add Jest test task for device types with coverage reporting

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -290,6 +290,25 @@
       "problemMatcher": []
     },
     {
+      "label": "Test: Device Types",
+      "type": "shell",
+      "command": "node",
+      "args": [
+        "--no-warnings",
+        "--experimental-vm-modules",
+        "node_modules/jest/bin/jest.js",
+        "--verbose",
+        "--coverage",
+        "--maxWorkers=100%",
+        "src/matterbridgeDeviceTypes.test.ts",
+        "src/matterbridgeDeviceTypes.requirements.test.ts",
+        "src/matterbridgeDeviceTypes.clusters.zcl.revision.test.ts",
+        "src/matterbridgeDeviceTypes.clusters.revision.test.ts"
+      ],
+      "group": { "kind": "test", "isDefault": false },
+      "problemMatcher": []
+    },
+    {
       "type": "npm",
       "script": "lint",
       "problemMatcher": ["$eslint-stylish"],
