--- a/package.json
+++ b/package.json
@@ -131,12 +131,12 @@
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
     "test:vitest:coverage": "vitest run --reporter verbose --coverage",
-    "lint": "npm --workspaces --if-present run lint && eslint --cache --cache-location .eslintcache --max-warnings=0 .",
-    "lint:fix": "npm --workspaces --if-present run lint:fix && eslint --cache --cache-location .eslintcache --fix --max-warnings=0 .",
-    "format": "npm --workspaces --if-present run format && prettier --cache --cache-location .prettiercache --write .",
-    "format:check": "npm --workspaces --if-present run format:check && prettier --cache --cache-location .prettiercache --check .",
-    "deepClean": "npm --workspaces --if-present run deepClean && npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .eslintcache .prettiercache node_modules/* node_modules/.[!.]* node_modules/..?*",
-    "reset": "npm run deepClean && npm install && npm run build && (npm link || sudo npm link) && shx chmod +x bin/*.js && npx jest --clearCache",
+    "lint": "npm --workspaces --if-present run lint && eslint --cache --cache-location .cache/.eslintcache --max-warnings=0 .",
+    "lint:fix": "npm --workspaces --if-present run lint:fix && eslint --cache --cache-location .cache/.eslintcache --fix --max-warnings=0 .",
+    "format": "npm --workspaces --if-present run format && prettier --cache --cache-location .cache/.prettiercache --write .",
+    "format:check": "npm --workspaces --if-present run format:check && prettier --cache --cache-location .cache/.prettiercache --check .",
+    "deepClean": "npm --workspaces --if-present run deepClean && npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .cache node_modules/* node_modules/.[!.]* node_modules/..?*",
+    "reset": "npm run deepClean && npm install && npm run build && (npm link || sudo npm link) && shx chmod +x bin/*.js",
     "git:status": "git status && git branch -vv && git diff dev origin/dev && git stash list",
     "git:remote": "git remote -v && git remote show origin",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
@@ -178,14 +178,14 @@
     "docker:run:local:alpine": "docker run --rm -it --name matterbridge-alpine -p 8585:8283 matterbridge:alpine"
   },
   "dependencies": {
-    "@matter/main": "0.15.6",
+    "@matter/main": "0.16.1",
     "archiver": "7.0.1",
     "express": "5.2.1",
     "glob": "13.0.0",
     "multer": "2.0.2",
     "node-ansi-logger": "3.1.1",
     "node-persist-manager": "2.0.0",
-    "ws": "8.18.3",
+    "ws": "8.19.0",
     "@matterbridge/dgram": "0.0.2",
     "@matterbridge/utils": "0.0.1",
     "@matterbridge/jest-utils": "0.0.1",
@@ -198,27 +198,27 @@
     "@types/express": "5.0.6",
     "@types/jest": "30.0.0",
     "@types/multer": "2.0.0",
-    "@types/node": "25.0.3",
+    "@types/node": "25.0.8",
     "@types/ws": "8.18.1",
-    "@vitest/coverage-v8": "4.0.16",
-    "@vitest/eslint-plugin": "1.6.5",
+    "@vitest/coverage-v8": "4.0.17",
+    "@vitest/eslint-plugin": "1.6.6",
     "cross-env": "10.1.0",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.12.1",
-    "eslint-plugin-jsdoc": "61.5.0",
+    "eslint-plugin-jsdoc": "62.0.0",
     "eslint-plugin-n": "17.23.1",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-promise": "7.2.1",
     "jest": "30.2.0",
     "marked": "17.0.1",
-    "npm-check-updates": "19.2.1",
+    "npm-check-updates": "19.3.1",
     "prettier": "3.7.4",
     "shx": "0.4.0",
     "ts-jest": "29.4.6",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.51.0",
-    "vitest": "4.0.16"
+    "typescript-eslint": "8.53.0",
+    "vitest": "4.0.17"
   }
 }
