--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "dataModel": "node ./scripts/data-model.mjs",
     "fetchChip": "node ./scripts/fetch-chip.mjs",
     "updateHtmls": "node ./scripts/marked.mjs",
-    "runMeBeforePublish": "npm run lint && npm run format && npm run build && npm run test",
+    "runMeBeforePublish": "npm run build && npm run lint && npm run format && npm run test && npm run build",
     "prepublishOnly": "npm pkg delete devDependencies scripts workspaces && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* package-lock.json npm-shrinkwrap.json && npm install --omit=dev && npm shrinkwrap --omit=dev",
     "prepublishOnlyProduction": "npm run cleanBuildProduction && npm run prepublishOnly",
     "npmPack": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm pack && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
@@ -178,7 +178,7 @@
     "docker:run:local:alpine": "docker run --rm -it --name matterbridge-alpine -p 8585:8283 matterbridge:alpine"
   },
   "dependencies": {
-    "@matter/main": "0.16.1",
+    "@matter/main": "0.16.2",
     "archiver": "7.0.1",
     "express": "5.2.1",
     "glob": "13.0.0",
@@ -208,8 +208,8 @@
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.12.1",
     "eslint-plugin-jsdoc": "62.0.0",
-    "eslint-plugin-n": "17.23.1",
-    "eslint-plugin-prettier": "5.5.4",
+    "eslint-plugin-n": "17.23.2",
+    "eslint-plugin-prettier": "5.5.5",
     "eslint-plugin-promise": "7.2.1",
     "jest": "30.2.0",
     "marked": "17.0.1",
