--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check Matter versions
+        run: npm ls @matter/main @matter/protocol
+
       - name: Build the project
         run: npm run build
 
@@ -60,17 +63,3 @@ jobs:
 
       - name: Test the project
         run: npm run test
-
-      - name: List, audit, fix outdated dependencies and build again
-        run: |
-          npm outdated || true
-          npm audit || true
-          npm audit fix || true
-          npm update || true
-          npx npm-check-updates -u || true
-          npm install || true
-          npm outdated || true
-          npm audit || true
-          npm run format || true
-          npm run lint:fix || true
-          npm run build || true
