--- a/package.json
+++ b/package.json
@@ -110,12 +110,6 @@
     }
   },
   "scripts": {
-    "build": "npm --workspaces --if-present run build && tsc --project tsconfig.json",
-    "buildProduction": "npm --workspaces --if-present run buildProduction && tsc --project tsconfig.production.json",
-    "clean": "npm --workspaces --if-present run clean && npx shx rm -rf tsconfig.tsbuildinfo dist",
-    "cleanBuild": "npm run clean && npm run build",
-    "cleanBuildProduction": "npm run clean && npm run buildProduction",
-    "watch": "tsc --project tsconfig.json --watch",
     "start": "node ./dist/cli.js",
     "start:bridge": "node ./dist/cli.js --bridge",
     "start:childbridge": "node ./dist/cli.js --childbridge",
@@ -123,6 +117,12 @@
     "start:gc": "node --expose-gc ./dist/cli.js --debug --trace --loader",
     "start:tracegc": "node --expose_gc --trace_gc ./dist/cli.js --debug --trace --loader",
     "start:tracegcverbose": "node --expose_gc --trace_gc_verbose ./dist/cli.js --debug --trace --loader",
+    "build": "npm --workspaces --if-present run build && tsc --project tsconfig.json",
+    "buildProduction": "npm --workspaces --if-present run buildProduction && tsc --project tsconfig.production.json",
+    "clean": "npm --workspaces --if-present run clean && npx shx rm -rf tsconfig.tsbuildinfo dist",
+    "cleanBuild": "npm run clean && npm run build",
+    "cleanBuildProduction": "npm run clean && npm run buildProduction",
+    "watch": "tsc --project tsconfig.json --watch",
     "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --maxWorkers=100%",
     "test:watch": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --watch --maxWorkers=100%",
     "test:verbose": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings\" jest --verbose --maxWorkers=100%",
@@ -131,12 +131,17 @@
     "test:vitest:watch": "vitest --reporter verbose",
     "test:vitest:verbose": "vitest run --reporter verbose",
     "test:vitest:coverage": "vitest run --reporter verbose --coverage",
+    "deepClean": "npm --workspaces --if-present run deepClean && npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .cache node_modules/* node_modules/.[!.]* node_modules/..?*",
+    "reset": "npm run deepClean && npm install --no-fund --no-audit && npm run build && (npm link --no-fund --no-audit|| sudo npm link --no-fund --no-audit) && shx chmod +x bin/*.js",
     "lint": "npm --workspaces --if-present run lint && eslint --cache --cache-location .cache/.eslintcache --max-warnings=0 .",
     "lint:fix": "npm --workspaces --if-present run lint:fix && eslint --cache --cache-location .cache/.eslintcache --fix --max-warnings=0 .",
     "format": "npm --workspaces --if-present run format && prettier --cache --cache-location .cache/.prettiercache --write .",
     "format:check": "npm --workspaces --if-present run format:check && prettier --cache --cache-location .cache/.prettiercache --check .",
-    "deepClean": "npm --workspaces --if-present run deepClean && npx shx rm -rf tsconfig.tsbuildinfo dist coverage jest temp package-lock.json npm-shrinkwrap.json .cache node_modules/* node_modules/.[!.]* node_modules/..?*",
-    "reset": "npm run deepClean && npm install && npm run build && (npm link || sudo npm link) && shx chmod +x bin/*.js",
+    "preversion": "npm run runMeBeforePublish",
+    "postversion": "git push",
+    "version:patch": "npm version patch -m \"Release %s\"",
+    "version:minor": "npm version minor -m \"Release %s\"",
+    "version:major": "npm version major -m \"Release %s\"",
     "git:status": "git status && git branch -vv && git diff dev origin/dev && git stash list",
     "git:remote": "git remote -v && git remote show origin",
     "git:hardreset:main": "git fetch origin && git checkout main && git reset --hard origin/main",
@@ -147,24 +152,24 @@
     "fetchChip": "node ./scripts/fetch-chip.mjs",
     "updateHtmls": "node ./scripts/marked.mjs",
     "runMeBeforePublish": "npm run build && npm run lint && npm run format && npm run test && npm run build",
-    "prepublishOnly": "npm pkg delete devDependencies scripts workspaces && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* package-lock.json npm-shrinkwrap.json && npm install --omit=dev && npm shrinkwrap --omit=dev",
+    "prepublishOnly": "npm pkg delete devDependencies scripts workspaces && npx shx rm -rf node_modules/* node_modules/.[!.]* node_modules/..?* package-lock.json npm-shrinkwrap.json && npm install --no-fund --no-audit --omit=dev && npm shrinkwrap --omit=dev",
     "prepublishOnlyProduction": "npm run cleanBuildProduction && npm run prepublishOnly",
-    "npmPack": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm pack && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
-    "npmPublishTagDev": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag dev && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
-    "npmPublishTagEdge": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag edge && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
+    "npmPack": "npx shx cp package.json package.json.backup && node scripts/version.mjs dev && npm run prepublishOnlyProduction && npm pack && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
+    "npmPublishTagDev": "npx shx cp package.json package.json.backup && node scripts/version.mjs dev && npm run prepublishOnlyProduction && npm publish --tag dev && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
+    "npmPublishTagEdge": "npx shx cp package.json package.json.backup && node scripts/version.mjs edge && npm run prepublishOnlyProduction && npm publish --tag edge && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
     "npmPublishTagLatest": "npx shx cp package.json package.json.backup && npm run prepublishOnlyProduction && npm publish --tag latest && npx shx cp package.json.backup package.json && npx shx rm -f package.json.backup && npm run reset",
     "checkDependencies": "npm --workspaces --if-present run checkDependencies && npx npm-check-updates",
     "updateDependencies": "npm --workspaces --if-present run updateDependencies && npx npm-check-updates -u && npm run reset",
     "updateMatter:latest": "npm install --save-exact @matter/main@latest && npm install && npm run reset",
     "updateMatter:dev": "npm install --save-exact @matter/main@dev && npm install && npm run reset",
     "updateMatter:loc": "npm install ../matter.js/packages/matter.js && npm install && npm run reset",
-    "install:dependencies": "npm install --save-exact @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
-    "install:scripts": "npm install --save-dev --save-exact npm-check-updates shx cross-env marked",
-    "install:typescript": "npm install --save-dev --save-exact typescript @types/node @types/express @types/ws",
-    "install:eslint": "npm install --save-dev --save-exact eslint @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
-    "install:prettier": "npm install --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier",
-    "install:jest": "npm install --save-dev --save-exact jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
-    "install:vitest": "npm install --save-dev --save-exact vitest @vitest/coverage-v8 @vitest/eslint-plugin",
+    "install:dependencies": "npm install --no-fund --no-audit --save-exact @matter/main archiver express glob multer node-ansi-logger node-persist-manager ws",
+    "install:scripts": "npm install --no-fund --no-audit --save-dev --save-exact npm-check-updates shx cross-env marked",
+    "install:typescript": "npm install --no-fund --no-audit --save-dev --save-exact typescript @types/node @types/express @types/ws",
+    "install:eslint": "npm install --no-fund --no-audit --save-dev --save-exact eslint @eslint/js typescript-eslint eslint-plugin-import eslint-plugin-n eslint-plugin-promise eslint-plugin-jsdoc",
+    "install:prettier": "npm install --no-fund --no-audit --save-dev --save-exact prettier eslint-config-prettier eslint-plugin-prettier",
+    "install:jest": "npm install --no-fund --no-audit --save-dev --save-exact jest ts-jest @types/jest @jest/globals eslint-plugin-jest",
+    "install:vitest": "npm install --no-fund --no-audit --save-dev --save-exact vitest @vitest/coverage-v8 @vitest/eslint-plugin",
     "buildAll": "npm run build && npm --workspaces run build",
     "lintAll": "npm run lint && npm --workspaces run lint",
     "testAll": "npm run test && npm --workspaces run test",
@@ -207,7 +212,7 @@
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jest": "29.12.1",
-    "eslint-plugin-jsdoc": "62.0.0",
+    "eslint-plugin-jsdoc": "62.0.1",
     "eslint-plugin-n": "17.23.2",
     "eslint-plugin-prettier": "5.5.5",
     "eslint-plugin-promise": "7.2.1",
