--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -32,13 +32,13 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install matterbridge dependencies
-        run: npm ci
+        run: npm ci --no-fund --no-audit
 
       - name: Build matterbridge
         run: npm run build
 
       - name: Link matterbridge globally
-        run: npm link
+        run: npm link --no-fund --no-audit
 
       - name: Run matterbridge tests
         run: npm run test:coverage
