--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,9 +18,6 @@ jobs:
           node-version: '22.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Clean cache
-        run: npm cache clean --force
-
       - name: Verify Node.js version
         run: node -v
 
@@ -28,13 +25,13 @@ jobs:
         run: npm -v
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --no-fund --no-audit
 
       - name: Build the project
         run: npm run build
 
       - name: Install matterbridge
-        run: npm install -g .
+        run: npm install --no-fund --no-audit --global .
 
       - name: Lint the project
         run: npm run lint
